[package]
name = "lensflaregen-rs"
version = "0.1.0"
authors = ["Petr.volf <petr.volf216@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gl = "0.14.0"
glutin = {version = "0.26", default-features=false, features=["x11"]}
imgui = "0.7.0"
imgui-winit-support = "0.7.1"
imgui-opengl-renderer = "0.11.0"
snailquote = "0.3.0"
thiserror = "1.0"
anyhow = "1.0"
log = "0.4"
simple_logger = "1.11"
rand = "0.8.3"
cgmath = "0.18.0"
image = {version = "0.23", default-features=false, features=["png"]}